--- a/_sass/pages/_landing.scss
+++ b/_sass/pages/_landing.scss
@@ -12,7 +12,7 @@
   height: calc(100vh - 82px);
 
   &:before {
-    background-image: url('../img/hero-moved.svg');
+    background-image: url('../img/hero.svg');
     background-position: -24rem top;
     background-repeat: no-repeat;
     background-size: cover;
@@ -37,7 +37,7 @@
   padding-top: 8rem;
 
   @include media-breakpoint-up(sm) {
-    padding-top: 4rem;
+    padding-top: 1rem;
   }
 
   h1 {
