--- a/_sass/pages/_landing.scss
+++ b/_sass/pages/_landing.scss
@@ -15,7 +15,7 @@
 
   &:before {
     background-image: url('../img/hero-mobile.svg');
-    background-position: center bottom -70px;
+    background-position: center bottom;
     background-repeat: no-repeat;
     background-size: 100% auto;
     opacity: 1;
