Update mobile hero

--- a/_sass/pages/_landing.scss
+++ b/_sass/pages/_landing.scss
@@ -8,6 +8,7 @@
   @extend %mb-0;
   background-color: #235384;
   position: relative;
+  padding-bottom: 5rem;
 
   @include media-breakpoint-up(sm) {
     height: calc(100vh - 82px);
