--- a/_sass/pages/_landing.scss
+++ b/_sass/pages/_landing.scss
@@ -170,29 +170,14 @@
 }
 
 .landing-info-img {
-  img {
-    // width: 90%;
-    margin: 0 auto;
-    // transform: scale(1);
-    // transition: 0.05s all ease;
-  }
-}
+  margin: 0 auto;
 
-@include media-breakpoint-up(lg) {
-  .landing-info-img {
-    img {
-      width: 80%;
-      // margin: 0 -15%;
+  img {
+    max-width: 100%;
+    text-align: center;
+
+    @include media-breakpoint-up(lg) {
+      max-width: 80%;
     }
   }
 }
-
-// @include media-breakpoint-up(xl) {
-//   .landing-info-img {
-//     img {
-//       width: 114%;
-//       margin: 0 -7%;
-//     }
-//   }
-// }
-
