--- a/_sass/pages/_landing.scss
+++ b/_sass/pages/_landing.scss
@@ -142,12 +142,11 @@
 .landing-info-text-col,
 .landing-info-img-col {
   @extend %d-flex;
-  @extend %align-items-center;
 }
 
 .landing-info-text-col {
   @extend %col-lg-7;
-  @extend %text-lg-left;
+  @extend %text-left;
 }
 
 .landing-info-text {
@@ -166,6 +165,7 @@
 }
 
 .landing-info-img-col {
+  @extend %align-items-center;
   @extend %col-lg-5;
   @extend %mt-4;
   @extend %mt-lg-0;
