Update careers page and remove JS

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -28,7 +28,7 @@
         </li>
         <li class="nav-item"><a class="nav-link" href="/work/"><span>Work</span></a></li>
         <li class="nav-item"><a class="nav-link" href="/culture/"><span>Culture</span></a></li>
-        <li class="nav-item"><a class="nav-link" href="/join/"><span>Join Us</span></a></li>
+        <li class="nav-item"><a class="nav-link" href="/careers/"><span>Careers</span></a></li>
         <li class="nav-item"><a class="nav-link" href="/blog/"><span>Blog</span></a></li>
         <li class="nav-item"><a class="nav-link" href="/hire-us/"><span>Hire Us</span></a></li>
       </ul>
