--- a/_sass/pages/_manifest.scss
+++ b/_sass/pages/_manifest.scss
@@ -8,7 +8,7 @@
 @import 'culture';
 @import 'policies';
 @import 'policy';
-@import 'join';
+@import 'careers';
 @import 'ditap';
 @import 'form_pages';
 @import 'blog';
