--- a/_sass/pages/_careers.scss
+++ b/_sass/pages/_careers.scss
@@ -36,6 +36,10 @@
     font-size: $font-size-x-large;
     margin-top: 1rem;
   }
+
+  .quote-text + p {
+    font-size: $font-size-medium;
+  }
 }
 
 
