update hero padding

--- a/_sass/pages/_careers.scss
+++ b/_sass/pages/_careers.scss
@@ -28,6 +28,11 @@
     margin-bottom: 0;
   }
 
+  .hero-container {
+    padding-bottom: 44px;
+    padding-top: 47px;
+  }
+
   .hero-heading {
     font-size: $font-size-xxx-large;
   }
