--- a/_sass/pages/_careers.scss
+++ b/_sass/pages/_careers.scss
@@ -117,6 +117,11 @@
   }
 }
 
+.open-positions-heading.open-positions-heading {
+  margin-bottom: 1.25em;
+  margin-top: 2.5em;;
+}
+
 .care-square {
   background-color: $sk-blue;
   width: 60px;
