--- a/_includes/head.html
+++ b/_includes/head.html
@@ -231,6 +231,7 @@
   <script src="/js/bootstrap.min.js"></script>
   <script src="/js/jquery.scrolldepth.min.js"></script>
   <script src="/js/script.js?v=7"></script>
+  <script src="https://kit.fontawesome.com/584a38c799.js" crossorigin="anonymous"></script>
 
   <!--[if lt IE 9]>
     <script src="/js/html5shiv.min.js"></script>
