--- a/_sass/pages/_careers.scss
+++ b/_sass/pages/_careers.scss
@@ -1,4 +1,4 @@
-.page-careers {
+.page--careers__text {
   h2 {
     font-size: $font-size-xxx-large;
     margin-top: 5rem;
@@ -46,6 +46,11 @@
   }
 }
 
+.section__care-package {
+  h3 {
+    margin-top: 1em;
+  }
+}
 
 // .join-us {
 //   @extend %col-sm-11;
