--- a/_sass/pages/_careers.scss
+++ b/_sass/pages/_careers.scss
@@ -8,7 +8,7 @@
     font-size: $font-size-small;
     letter-spacing: 0.05em;
     line-height: 1.375;
-    margin-top: 1.5em;
+    margin-top: 2rem;
     text-transform: uppercase;
   }
 
