Update main navigation and add redirects

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,26 +11,28 @@
 
     <div id="navbar-nav-collapsible" class="collapse navbar-collapse">
       <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link" href="/about/"><span>About</span></a></li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <span>Services</span>
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownAbout" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <span>About</span>
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="/services/">All Services</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="/services/digital-services-delivery/">Digital Services Delivery</a>
-            <a class="dropdown-item" href="/services/digital-procurement/">Digital Procurement</a>
-            <a class="dropdown-item" href="/services/digital-transformation/">Digital Transformation</a>
-            <a class="dropdown-item" href="/services/microconsulting/">Microconsulting</a>
-            <a class="dropdown-item" href="/services/ditap/">DITAP Training</a>
+            <a class="dropdown-item" href="/about/#meet-the-team">Team</a>
+            <a class="dropdown-item" href="/culture/">Culture</a>
           </div>
         </li>
-        <li class="nav-item"><a class="nav-link" href="/work/"><span>Work</span></a></li>
-        <li class="nav-item"><a class="nav-link" href="/culture/"><span>Culture</span></a></li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownWork" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <span>Work</span>
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="/services/">Services</a>
+            <a class="dropdown-item" href="#0">Products</a>
+            <a class="dropdown-item" href="/work/">Case Studies</a>
+          </div>
+        </li>
         <li class="nav-item"><a class="nav-link" href="/careers/"><span>Careers</span></a></li>
         <li class="nav-item"><a class="nav-link" href="/blog/"><span>Blog</span></a></li>
-        <li class="nav-item"><a class="nav-link" href="/hire-us/"><span>Hire Us</span></a></li>
+        <li class="nav-item"><a class="nav-link" href="/contact/"><span>Contact</span></a></li>
       </ul>
     </div>
   </nav>
