Update footer nav

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,37 +11,10 @@
       <div class="footer-link-groups">
         <div class="footer-link-group">
           <div class="footer-links">
-            <h4>Services</h4>
-
+            <h4>About</h4>
             <ul>
-              <li><a href="/services/digital-services-delivery/">Digital Services Delivery</a></li>
-              <li><a href="/services/digital-procurement/">Digital Procurement</a></li>
-              <li><a href="/services/digital-transformation/">Digital Transformation</a></li>
-              <li><a href="/services/microconsulting/">Microconsulting</a></li>
-              <li><a href="/services/ditap/">DITAP Training</a></li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="footer-link-group">
-          <div class="footer-links">
-            <h4>Company</h4>
-
-            <ul>
-              <li><a href="/about/">About</a></li>
+              <li><a href="/about/#meet-the-team">Team</a></li>
               <li><a href="/culture/">Culture</a></li>
-              <li><a href="/join/">Careers</a></li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="footer-link-group">
-          <div class="footer-links">
-            <h4>Resources</h4>
-
-            <ul>
-              <li><a href="/blog/">Blog</a></li>
-              <li><a href="/work/">Case Studies</a></li>
               <li><a href="/policies/">Policies</a></li>
             </ul>
           </div>
@@ -49,13 +22,23 @@
 
         <div class="footer-link-group">
           <div class="footer-links">
-            <h4>Connect</h4>
-
+            <h4>Work</h4>
             <ul>
-              <li><a href="{{site.github_repo_url}}">GitHub</a></li>
-              <li><a href="{{site.twitter_url}}">Twitter</a></li>
-              <li><a href="{{site.linkedin_url}}">LinkedIn</a></li>
-              <li><a href="/hire-us/">Hire Us</a></li>
+              <li><a href="/services/">Services</a></li>
+              <li><a href="#0">Products</a></li>
+              <li><a href="/work/">Case Studies</a></li>
+              <li><a href="#0">Contracting</a></li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="footer-link-group">
+          <div class="footer-links">
+            <h4>Connect</h4>
+            <ul>
+              <li><a href="/blog/">Blog</a></li>
+              <li><a href="/careers/">Careers</a></li>
+              <li><a href="/contact/">Contact</a></li>
             </ul>
           </div>
         </div>
