Change About page to Team

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,7 +13,7 @@
           <div class="footer-links">
             <h4>About</h4>
             <ul>
-              <li><a href="/about/#meet-the-team">Team</a></li>
+              <li><a href="/team/">Team</a></li>
               <li><a href="/culture/">Culture</a></li>
               <li><a href="/policies/">Policies</a></li>
             </ul>
