--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
             <span>About</span>
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="/about/#meet-the-team">Team</a>
+            <a class="dropdown-item" href="/team/">Team</a>
             <a class="dropdown-item" href="/culture/">Culture</a>
           </div>
         </li>
