Add yellow dropdown

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -123,6 +123,7 @@ $brand-info: $sk-blue;
 $brand-warning: $sk-yellow;
 $brand-danger: $sk-red;
 $brand-inverse: $gray-dark;
+$brand-gray-light: #f4f4f5;
 
 // Body
 $body-color: $gray-dark;
