Add hover style to dropdown and align items

--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -137,9 +137,11 @@
 }
 
 .dropdown-item {
+  padding-left: 15px;
+
   &:focus,
   &:hover {
-    background-color: transparent;
+    background-color: darken($sk-yellow, 15%);
   }
 }
 
