Remove bold from dropdown focus style

--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -120,7 +120,7 @@
     background-color: $brand-gray-light;
   }
 
-  &:focus,
+//  &:focus,
   &[aria-current] {
     span {
       font-weight: 700;
