Go back to older font awesome

--- a/_includes/open_positions.html
+++ b/_includes/open_positions.html
@@ -13,7 +13,7 @@
           <a class="no-border" href="{{ item.url }}" title="View job posting for {{ item.title }}">
             {{ item.title }}
           </a>
-          <p><i class="fas fa-globe-americas mr-2"></i>{{ item.location }}</p>
+          <p><i class="fa fa-globe mr-2"></i>{{ item.location }}</p>
         </li>
       {% endfor %}
       </ul>
