--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,7 +26,7 @@
             <ul>
               <li><a href="/services/">Services</a></li>
               <li><a href="#0">Products</a></li>
-              <li><a href="/case-studies/">Case studies</a></li>
+              <li><a href="/case-studies/">Case Studies</a></li>
               <li><a href="#0">Contracting</a></li>
             </ul>
           </div>
