--- a/_includes/header.html
+++ b/_includes/header.html
@@ -27,7 +27,7 @@
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="/services/">Services</a>
             <a class="dropdown-item" href="#0">Products</a>
-            <a class="dropdown-item" href="/case-studies/">Case studies</a>
+            <a class="dropdown-item" href="/case-studies/">Case Studies</a>
           </div>
         </li>
         <li class="nav-item"><a class="nav-link" href="/careers/"><span>Careers</span></a></li>
