--- a/_sass/pages/_blog.scss
+++ b/_sass/pages/_blog.scss
@@ -13,16 +13,37 @@
 .page-blog {
   article {
     @include media-breakpoint-up(md) {
+      .blog-post-img {
+        height: 178px;
+      }
+
       &:nth-child(1) {
         @include make-col(12);
+
+        .blog-post-title {
+          font-size: $font-size-xxx-large;
+        }
+
+        .blog-post-text {
+          font-size: $font-size-medium;
+        }
+
+        .blog-post-img {
+          height: 412px;
+        }
       }
 
-      &:nth-child(2) {
-        @include make-col(6);
-      }
-
+      &:nth-child(2),
       &:nth-child(3) {
         @include make-col(6);
+
+        .blog-post-title {
+          font-size: $font-size-x-large;
+        }
+
+        .blog-post-img {
+          height: 270px;
+        }
       }
     }
   }
@@ -30,3 +51,16 @@
 
 @include semantic-card('blog-post');
 @include multi-col-spacing('blog-post-col', $mb-size: 4, $mb-md-size: 5);
+
+.blog-post-footer {
+  padding-top: 0;
+}
+
+.blog-post-title {
+  line-height: 1.3;
+  font-size: $font-size-large;
+}
+
+.blog-post-text {
+  margin-top: 1rem !important;
+}
