--- a/_sass/pages/_blog.scss
+++ b/_sass/pages/_blog.scss
@@ -49,6 +49,16 @@
   }
 }
 
+.project-col,
+.blog-post-col {
+  @include media-breakpoint-up(md) {
+    // Remove bottom margin from 3rd to last article
+    &:nth-last-child(3) {
+      margin-bottom: 0 !important;
+    }
+  }
+}
+
 @include semantic-card('blog-post');
 @include multi-col-spacing('blog-post-col', $mb-size: 4, $mb-md-size: 5);
 
