--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -257,7 +257,7 @@ $btn-form-border: $btn-form-color;
 $btn-form-active-color: $brand-primary;
 
 // Cards
-$card-box-shadow: 0 1px 9px rgba(0, 0, 0, .3);
+$card-box-shadow: 0 1px 3px rgba(0,0,0,0.3);
 
 // Modals
 $modal-header-color: $brand-primary;
