--- a/_includes/hero_banner.html
+++ b/_includes/hero_banner.html
@@ -1,4 +1,4 @@
-<div class="hero hero-banner mb-5">
+<div class="hero hero-banner mb-5" {% if include.image %}style="background-image: url({{ include.image }});"{% endif %}>
   <div class="hero-container container-fluid text-center page--careers__text">
     <h1 class="hero-heading">
       {% if include.hero_title %}
