--- a/_sass/pages/_blog.scss
+++ b/_sass/pages/_blog.scss
@@ -21,15 +21,25 @@
         @include make-col(12);
 
         .blog-post-title {
-          font-size: $font-size-xxx-large;
+          font-size: $font-size-x-large;
         }
 
-        .blog-post-text {
-          font-size: $font-size-medium;
+        // .blog-post-text {
+        //   font-size: $font-size-medium;
+        // }
+
+        .blog-post-card {
+          flex-direction: inherit;
         }
 
         .blog-post-img {
-          height: 412px;
+          @include make-col(8);
+          border-top-right-radius: 0;
+          height: inherit;
+        }
+
+        .blog-post-block {
+          @include make-col(4);
         }
       }
 
@@ -63,7 +73,7 @@
 @include multi-col-spacing('blog-post-col', $mb-size: 4, $mb-md-size: 5);
 
 .blog-post-footer {
-  padding-top: 0;
+  padding: 0;
 }
 
 .blog-post-title {
