--- a/_sass/pages/_landing.scss
+++ b/_sass/pages/_landing.scss
@@ -13,6 +13,7 @@
   @include media-breakpoint-up(sm) {
     min-height: calc(100vh - 82px);
     padding-bottom: initial;
+    padding-top: 12vh;
   }
 
   &:before {
@@ -43,7 +44,6 @@
 
   @include media-breakpoint-up(sm) {
     padding-bottom: 3rem;
-    padding-top: 1rem;
   }
 
   h1 {
