Change to consistent chevron arrow

--- a/_includes/carry_culture_cta.html
+++ b/_includes/carry_culture_cta.html
@@ -4,5 +4,5 @@
   text_css_class = "page-subfooter-text-col"
   cta_path = "/join/"
   cta = "Join Skylight"
-  icon_css_class = "fa fa-arrow-right"
+  icon_css_class = "fa fa-chevron-right"
 %}
