--- a/_includes/hire_us_cta.html
+++ b/_includes/hire_us_cta.html
@@ -4,5 +4,5 @@
   text_css_class = "page-subfooter-text-col"
   cta_path = "/hire-us/"
   cta = "Contact Us"
-  icon_css_class = "fa fa-arrow-right"
+  icon_css_class = "fa fa-chevron-right"
 %}
