--- a/_includes/notice_bar.html
+++ b/_includes/notice_bar.html
@@ -3,7 +3,7 @@
     <div class="notice-bar-col">
       <a href="/join/">
         <span>We're looking to hire great designers, engineers, and more!</span>
-        <i class="fa fa-arrow-right" aria-hidden="true"></i>
+        <i class="fa fa-chevron-right" aria-hidden="true"></i>
       </a>
     </div>
   </div>
