--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -14,3 +14,23 @@
   position: sticky;
   top: 1rem;
 }
+
+.bg-yellow {
+  background-color: $sk-yellow;
+}
+
+.bg-red {
+  background-color: $sk-red;
+}
+
+.bg-green {
+  background-color: $sk-green;
+}
+
+.bg-blue {
+  background-color: $sk-blue;
+}
+
+.text-ink {
+  color: $black;
+}
