--- a/_includes/hero_banner.html
+++ b/_includes/hero_banner.html
@@ -1,12 +1,12 @@
-<div class="hero hero-banner mb-5" {% if include.image %}style="background-image: url({{ include.image }});"{% endif %}>
+<div class="hero hero-banner mb-5 {% if include.color %}bg-{{ include.color }}{% endif %}" {% if include.image %}style="background-image: url({{ include.image }});"{% endif %}>
   <div class="hero-container container-fluid text-center page--careers__text">
-    <h1 class="hero-heading">
+    <h1 class="hero-heading {% if include.text == 'dark' %}text-ink{% endif %}">
       {% if include.hero_title %}
         {{ include.hero_title }}
       {% else %}
         {{ page.title }}
       {% endif %}
     </h1>
-    <p class="hero-content">{{ include.hero_content }}</p>
+    <p class="hero-content {% if include.text == 'dark' %}text-ink{% endif %}">{{ include.hero_content }}</p>
   </div>
 </div>
