--- a/_sass/pages/_careers.scss
+++ b/_sass/pages/_careers.scss
@@ -118,7 +118,11 @@
   height: 60px;
 }
 
-.subnav-col li .active:after,
-.subnav-col li:hover {
-  border-left-color: $sk-yellow;
+.subnav-col {
+  li {
+    .active:after,
+    &:hover {
+      border-left-color: $sk-yellow;
+    }
+  }
 }
