Add skeleton for new pages

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,9 +25,9 @@
             <h4>Work</h4>
             <ul>
               <li><a href="/services/">Services</a></li>
-              <li><a href="#0">Products</a></li>
+              <li><a href="/products/">Products</a></li>
               <li><a href="/case-studies/">Case Studies</a></li>
-              <li><a href="#0">Contracting</a></li>
+              <li><a href="/contracting/">Contracting</a></li>
             </ul>
           </div>
         </div>
