--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,7 +26,7 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="/services/">Services</a>
-            <a class="dropdown-item" href="#0">Products</a>
+            <a class="dropdown-item" href="/products/">Products</a>
             <a class="dropdown-item" href="/case-studies/">Case Studies</a>
           </div>
         </li>
