--- a/_includes/open_positions.html
+++ b/_includes/open_positions.html
@@ -26,5 +26,5 @@
   </p>
 {% endif %}
 
-<p>Don’t see your role? Don’t worry, we could be hiring sooner than you think, so we’d still love to talk. <a href="/join/#application">Simply send us your info</a>.</p>
+<p>Don’t see your role? Don’t worry, we could be hiring sooner than you think, so we’d still love to talk. <a href="/join-form/">Simply send us your info</a>.</p>
 <p>For most roles, we also offer apprenticeship opportunities for post-graduate professionals and internship opportunities for current or recently graduated college students.</p>
