Add commented out code for header experiment

--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -199,3 +199,10 @@
     border-bottom: none;
   }
 }
+
+// .navbar-collapse {
+//   &.collapsing[aria-expanded="true"],
+//   &.show {
+//     height: 100vh !important;
+//   }
+// }
