--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 
   <div class="footer-content">
     <div class="footer-brand">
-      <a class="footer-brandmark" href="/about/#hubzone">
+      <a class="footer-brandmark">
         HUBZone Certified
       </a>
     </div>
@@ -11,11 +11,11 @@
       <div class="footer-link-groups">
         <div class="footer-link-group">
           <div class="footer-links">
-            <h4>About</h4>
+            <h4>Company</h4>
             <ul>
-              <li><a href="/team/">Team</a></li>
-              <li><a href="/culture/">Culture</a></li>
-              <li><a href="/policies/">Policies</a></li>
+              <li><a href="/company/about/">About</a></li>
+              <li><a href="/about/culture/">Culture</a></li>
+              <li><a href="/company/policies/">Policies</a></li>
             </ul>
           </div>
         </div>
@@ -24,10 +24,9 @@
           <div class="footer-links">
             <h4>Work</h4>
             <ul>
-              <li><a href="/services/">Services</a></li>
-              <li><a href="/products/">Products</a></li>
-              <li><a href="/case-studies/">Case Studies</a></li>
-              <li><a href="/contracting/">Contracting</a></li>
+              <li><a href="/work/services/">Services</a></li>
+              <li><a href="/work/experience/">Experience</a></li>
+              <li><a href="/work/contracting/">Contracting</a></li>
             </ul>
           </div>
         </div>
