--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,11 +13,11 @@
       <ul class="navbar-nav">
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownAbout" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <span>About</span>
+            <span>Company</span>
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="/team/">Team</a>
-            <a class="dropdown-item" href="/culture/">Culture</a>
+            <a class="dropdown-item" href="/company/about/">About Us</a>
+            <a class="dropdown-item" href="/about/culture/">Our Culture</a>
           </div>
         </li>
         <li class="nav-item dropdown">
@@ -25,9 +25,8 @@
             <span>Work</span>
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="/services/">Services</a>
-            <a class="dropdown-item" href="/products/">Products</a>
-            <a class="dropdown-item" href="/case-studies/">Case Studies</a>
+            <a class="dropdown-item" href="/work/services/">Our Services</a>
+            <a class="dropdown-item" href="/work/experience/">Our Experience</a>
           </div>
         </li>
         <li class="nav-item"><a class="nav-link" href="/careers/"><span>Careers</span></a></li>
