--- a/_sass/pages/_manifest.scss
+++ b/_sass/pages/_manifest.scss
@@ -3,7 +3,7 @@
 @import 'about';
 @import 'services';
 @import 'service_area';
-@import 'work';
+@import 'projects';
 @import 'project';
 @import 'culture';
 @import 'policies';
