--- a/_includes/notice_bar.html
+++ b/_includes/notice_bar.html
@@ -1,7 +1,7 @@
 <div class="notice-bar">
   <div class="notice-bar-row">
     <div class="notice-bar-col">
-      <a href="/join/">
+      <a href="/careers/">
         <span>We're looking to hire great designers, engineers, and more!</span>
         <i class="fa fa-chevron-right" aria-hidden="true"></i>
       </a>
