--- a/_sass/pages/_blog.scss
+++ b/_sass/pages/_blog.scss
@@ -17,44 +17,40 @@
         height: 178px;
       }
 
-      &:nth-child(1) {
-        @include make-col(12);
+      // &:nth-child(1) {
+      //   @include make-col(12);
 
-        .blog-post-title {
-          font-size: $font-size-x-large;
-        }
+      //   .blog-post-title {
+      //     font-size: $font-size-x-large;
+      //   }
 
-        // .blog-post-text {
-        //   font-size: $font-size-medium;
-        // }
+      //   .blog-post-card {
+      //     flex-direction: inherit;
+      //   }
 
-        .blog-post-card {
-          flex-direction: inherit;
-        }
+      //   .blog-post-img {
+      //     @include make-col(8);
+      //     border-top-right-radius: 0;
+      //     height: inherit;
+      //   }
 
-        .blog-post-img {
-          @include make-col(8);
-          border-top-right-radius: 0;
-          height: inherit;
-        }
+      //   .post-card-content {
+      //     @include make-col(4);
+      //   }
+      // }
 
-        .post-card-content {
-          @include make-col(4);
-        }
-      }
+      // &:nth-child(2),
+      // &:nth-child(3) {
+      //   @include make-col(6);
 
-      &:nth-child(2),
-      &:nth-child(3) {
-        @include make-col(6);
+      //   .blog-post-title {
+      //     font-size: $font-size-x-large;
+      //   }
 
-        .blog-post-title {
-          font-size: $font-size-x-large;
-        }
-
-        .blog-post-img {
-          height: 270px;
-        }
-      }
+      //   .blog-post-img {
+      //     height: 270px;
+      //   }
+      // }
     }
   }
 }
@@ -79,7 +75,7 @@
 
 .blog-post-title {
   line-height: 1.3;
-  font-size: $font-size-large;
+  font-size: $font-size-x-large;
 }
 
 .blog-post-text {
