add content for toolkits, contracting pages and some other changes

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,6 +26,7 @@
             <ul>
               <li><a href="/work/services/">Services</a></li>
               <li><a href="/work/experience/">Experience</a></li>
+              <li><a href="/work/toolkits/">Toolkits</a></li>
               <li><a href="/work/contracting/">Contracting</a></li>
             </ul>
           </div>
