--- a/_includes/header.html
+++ b/_includes/header.html
@@ -27,6 +27,7 @@
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="/work/services/">Our Services</a>
             <a class="dropdown-item" href="/work/experience/">Our Experience</a>
+            <a class="dropdown-item" href="/work/toolkits/">Toolkits</a>
           </div>
         </li>
         <li class="nav-item"><a class="nav-link" href="/careers/"><span>Careers</span></a></li>
